# rust-wasmtime

./: Cargo.toml  README.md
crates/ext/: Cargo.toml
crates/ext-api/: Cargo.toml  README.md
crates/ext-api/src/: extension_api.rs
crates/ext-api/wit/since_v0.0.1/: commands.wit  extension.wit
crates/ext-cli/: Cargo.toml
crates/ext-cli/src/: main.rs
crates/ext-core/: Cargo.toml
crates/ext-core/src/: extension.rs  extension_builder.rs
crates/ext-host/: Cargo.toml
crates/ext-manifest/: Cargo.toml  reference.json
crates/ext-manifest/src/: extension_manifest.rs
crates/ext-schema/: Cargo.toml  build.rs
crates/ext/src/: main.rs
crates/fs/: Cargo.toml
crates/utils/: Cargo.toml
crates/utils/src/: command.rs
extensions/base64/: Cargo.toml  extension.json
extensions/clipboard/: Cargo.toml  extension.json
extensions/emoji/: Cargo.toml
