[workspace]
members = [
  "crates/ext",
  "crates/ext-api",
  "crates/ext-cli",
  "crates/ext-core",
  "crates/ext-manifest",
  "crates/ext-schema",
  "crates/fs",
  "crates/paths",
  "crates/utils",
  "extensions/clipboard",
  "extensions/emoji",
]
resolver = "2"

[workspace.package]
description = "Try to build an extension system with wasmtime"
edition = "2021"
license = "MIT"
homepage = "https://github.com/SpuerMomonga/rust-wasmtime"
repository = "https://github.com/SpuerMomonga/rust-wasmtime"
readme = "README.md"
authors = ["SpuerMomonga <spuermomonga@qq.com>"]

[workspace.dependencies]

#
# Workspace member crates
#

ext-api = { path = "crates/ext-api" }
ext-core = { path = "crates/ext-core" }
ext-manifest = { path = "crates/ext-manifest" }
fs = { path = "crates/fs" }
paths = { path = "crates/paths" }
utils = { path = "crates/utils" }

#
# External crates
#

anyhow = "1"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0.0"
file-id = "0.2.3"
futures = "0.3"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = { version = "1", features = ["serde"] }
schemars = { version = "1", features = ["url2", "semver1"] }
strum = { version = "0.27", features = ["derive"] }
url = { version = "2", features = ["serde"] }
tokio = { version = "1" }
wasmtime = { version = "36", default-features = false, features = [
  "wat",
  "async",
  "demangle",
  "runtime",
  "cranelift",
  "component-model",
  "incremental-cache",
  "parallel-compilation",
] }
wasmtime-wasi = "36"
