[package]
name = "ext-cli"
version = "0.0.0"
publish = false
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "ext-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
ext-core.workspace = true
ext-manifest.workspace = true
fs.workspace = true
tokio = { workspace = true, features = ["full"] }
