[package]
name = "ext-manifest"
version = "0.0.1"
publish = false
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
path = "src/extension_manifest.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
schemars.workspace = true
# strum.workspace = true
url.workspace = true