[package]
name = "ext"
version = "0.0.0"
publish = false
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
wasmtime.workspace = true
